--- a/frozen_lake.ipynb
+++ b/frozen_lake.ipynb
@@ -249,9 +249,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you notice the results there was a peak as iter 6000 but then it dropped again\n",
-    "I really don't know why\n",
-    "I could try increasing the training (number of episodes)\n",
+    "To increase accuracy,\n",
+    "I could try increasing the training (number of episodes) --- I did from 10,000 to 50,000 \n",
     "or maybe perhaps other parameters \n",
     "\n",
     "I dont know for sure\n",
