--- a/frozen_lake.ipynb
+++ b/frozen_lake.ipynb
@@ -250,7 +250,7 @@
    "metadata": {},
    "source": [
     "To increase accuracy,\n",
-    "I could try increasing the training (number of episodes) --- I did from 10,000 to 50,000 \n",
+    "I could try increasing the training (number of episodes) --- I did from 10,000 to 50,000 --- \n",
     "or maybe perhaps other parameters \n",
     "\n",
     "I dont know for sure\n",
