--- a/frozen_lake.ipynb
+++ b/frozen_lake.ipynb
@@ -11,10 +11,10 @@
     "\n",
     "ILLUSTRATIVE INSTANCE\n",
     "\n",
-    "S F F F /\n",
-    "F H F H /\n",
-    "F F F H /\n",
-    "H F F G /\n"
+    "S F F F  \n",
+    "F H F H  \n",
+    "F F F H  \n",
+    "H F F G\n"
    ]
   },
   {
@@ -250,7 +250,7 @@
    "metadata": {},
    "source": [
     "To increase accuracy,\n",
-    "I could try increasing the training (number of episodes) --- I did from 10,000 to 50,000 --- \n",
+    "I could try increasing the training (number of episodes) --- I did increase it (from 10,000 to 50,000) --- \n",
     "or maybe perhaps other parameters \n",
     "\n",
     "I dont know for sure\n",
@@ -304,9 +304,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "well then\n",
+    "well then  \n",
     "i guess that sums it up\n",
     "\n",
+    "for now our bes bet with this parameters is just about 0.7  \n",
     "to get better avg rewards (> 0.7)\n",
     "we might have to tune the parameters 👀\n",
     "\n",
