--- a/frozen_lake.ipynb
+++ b/frozen_lake.ipynb
@@ -130,7 +130,7 @@
    "source": [
     "#MAIN LOOP FUNCTION\n",
     "def mainloop(Q_table, n_episodes, max_iter_episode, exp_prob, exp_decreasing_decay, min_exp_prob, gamma, lr):\n",
-    "    reward_per_episode = list() #stores reward foroevery episode and return it (would be used for evaluation)\n",
+    "    reward_per_episode = list() #stores reward for every episode and returns it (would be used for evaluation)\n",
     "    #iterate over episodes\n",
     "    for e in range(n_episodes):\n",
     "        #init first state of the episode\n",
